--- a/index.html
+++ b/index.html
@@ -12,23 +12,43 @@
 
     <header class="container">
       <nav>
-        <a href="">Logo</a>
-        <div class="mobile-menu" data-menu>
+        <a href="/" class="header__logo">
+          <img class="header__logo-img" src="./images/svg/logo.svg" alt="" />
+        </a>
+        <div class="mobile-menu is-open" data-menu>
           <div class="content">
             <ul class="header__nav-list">
-              <li><a href="">О нас</a></li>
-              <li><a href="">Услуги и цены</a></li>
-              <li><a href="">Мастера</a></li>
-              <li><a href="">Контакты</a></li>
+              <li class="header__nav-item">
+                <a href="">О нас</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="">Услуги и цены</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="">Мастера</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="">Контакты</a>
+              </li>
             </ul>
-            <ul>
-              <li>
+            <ul class="header__links-list">
+              <li class="header__link">
                 <a href="tel:+380441111111">+38 044 111 11 11</a>
               </li>
-              <li>
+              <li class="header__link">
                 <a href="mailto:example@gmail.com">онлайн-запись</a>
               </li>
             </ul>
+            <div>
+              <ul>
+                <li>
+                  <a href="">Instagram</a>
+                </li>
+                <li>
+                  <a href="">Youtube</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
@@ -56,17 +76,7 @@
     </header>
     <main>
       <!-- hero -->
-      <section>
-        <div>
-          <ul>
-            <li>
-              <a href="">Instagram</a>
-            </li>
-            <li>
-              <a href="">Youtube</a>
-            </li>
-          </ul>
-        </div>
+      <section class="container hero">
         <div>
           <p>A hair salon for men in Kyiv</p>
           <h1>BarberShop</h1>
