--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
       <!-- hero -->
       <section class="hero">
         <div class="container">
-          <p>A hair salon for men in Kyiv</p>
-          <h1>BarberShop</h1>
-          <p>
+          <div class="hero__title-block">
+            <span class="hero__title--span"></span>
+            <h1 class="hero__main-title">A hair salon for men in Kyiv</h1>
+          </div>
+          <h2 class="hero__title">BarberShop</h2>
+          <p class="hero__text">
             Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и
             со вкусом.
           </p>
