--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <div class="container">
+        <div>
           <div class="hero__title-block">
             <span class="hero__title--span"></span>
             <h1 class="hero__main-title">A hair salon for men in Kyiv</h1>
@@ -92,21 +92,31 @@
 
       <!-- about us -->
 
-      <section>
-        <h2>О НАС</h2>
-        <h3>Лучший Барбершоп твоего города</h3>
-        <p>
-          Если ты хочешь добавить в свой образ больше уверенности – тебе точно к
-          нам.
-        </p>
-        <p>
-          Мы команда, которая никогда не останавливается на достигнутом и жаждет
-          перемен. И когда ты попадешь в руки нашего мастера, то уже никогда не
-          сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной
-          волне". Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам
-          приходит!
-        </p>
-        <a href="">онлайн-запись</a>
+      <section class="container info">
+        <div class="info__title-block">
+          <span class="info__title--span"></span>
+          <h2 class="info__main-title">О НАС</h2>
+        </div>
+        <h3 class="info__title">Лучший Барбершоп твоего города</h3>
+
+        <ul class="info__texts-list">
+          <li>
+            <p class="info__text">
+              Если ты хочешь добавить в свой образ больше уверенности – тебе
+              точно к нам.
+            </p>
+          </li>
+          <li>
+            <p class="info__text">
+              Мы команда, которая никогда не останавливается на достигнутом и
+              жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже
+              никогда не сможешь быть прежним. Мы команда, которая всегда с
+              клиентами "на одной волне". Поэтому, мы всегда готовы
+              усовершенствовать каждого, кто к нам приходит!
+            </p>
+          </li>
+        </ul>
+        <a class="button--light" href="">онлайн-запись</a>
       </section>
 
       <!-- prices -->
