--- a/index.html
+++ b/index.html
@@ -121,30 +121,53 @@
 
       <!-- prices -->
 
-      <section>
-        <h2>Проведи время в компании лучших мастеров</h2>
-        <h3>Услуги и цены</h3>
-        <ul>
-          <li>Мужская стрижка</li>
-          <li>от 300 грн.</li>
-          <li>Стрижка бороды</li>
-          <li>от 200 грн.</li>
-          <li>Стрижка усов</li>
-          <li>от 200 грн.</li>
-          <li>Бритье опасной бритвой</li>
-          <li>от 200 грн.</li>
-        </ul>
-        <ul>
-          <li>Cтрижка у стажера</li>
-          <li>от 50 грн.</li>
-          <li>Стрижка под насадку</li>
-          <li>от 200 грн.</li>
-          <li>Детская стрижка (до 12 лет)</li>
-          <li>от 300 грн.</li>
-          <li>Камуфлирование седины</li>
-          <li>от 200 грн.</li>
-        </ul>
-        <a href="">онлайн-запись</a>
+      <section class="prices">
+        <div class="container center">
+          <div class="prices__title-block">
+            <span class="prices__title--span"></span>
+            <h2 class="prices__main-title">
+              Проведи время в компании лучших мастеров
+            </h2>
+          </div>
+          <h3 class="prices__title">Услуги и цены</h3>
+
+          <ul class="prices__list">
+            <li class="prices__item">
+              <span>Мужская стрижка</span
+              ><span class="prices__list--span"></span><span>от 300 грн.</span>
+            </li>
+            <li class="prices__item">
+              <span>Стрижка бороды</span><span class="prices__list--span"></span
+              ><span>от 200 грн.</span>
+            </li>
+            <li class="prices__item">
+              <span>Стрижка усов</span><span class="prices__list--span"></span
+              ><span>от 200 грн.</span>
+            </li>
+            <li class="prices__item">
+              <span>Бритье опасной бритвой</span
+              ><span class="prices__list--span"></span><span>от 200 грн.</span>
+            </li>
+            <li class="prices__item">
+              <span>Cтрижка у стажера</span
+              ><span class="prices__list--span"></span><span>от 50 грн.</span>
+            </li>
+            <li class="prices__item">
+              <span>Стрижка под насадку</span
+              ><span class="prices__list--span"></span><span>от 200 грн.</span>
+            </li>
+            <li class="prices__item">
+              <span>Детская стрижка (до 12 лет)</span
+              ><span class="prices__list--span"></span><span>от 300 грн.</span>
+            </li>
+            <li class="prices__item">
+              <span>Камуфлирование седины</span
+              ><span class="prices__list--span"></span><span>от 200 грн.</span>
+            </li>
+          </ul>
+
+          <a class="button--dark" href="">онлайн-запись</a>
+        </div>
       </section>
 
       <!-- statistic -->
