--- a/index.html
+++ b/index.html
@@ -172,33 +172,41 @@
 
       <!-- statistic -->
 
-      <section>
-        <ul>
-          <li>
-            <span>600</span>
-            <p>Довольных клиентов в день</p>
-          </li>
-          <li>
-            <span>50</span>
-            <p>Наград за отличный сервис</p>
-          </li>
-          <li>
-            <span>20</span>
-            <p>Лучших мастеров Киева</p>
-          </li>
-          <li>
-            <span>100</span>
-            <p>Подарков постоянным клиентам</p>
-          </li>
-        </ul>
+      <section class="container statistic">
         <div>
-          <h2>старая традиционная школа</h2>
-          <h3>Почему приходят именно к нам?</h3>
-          <p>
+          <div class="statistic__title-block">
+            <span class="statistic__title--span"></span>
+            <h2 class="statistic__main-title">старая традиционная школа</h2>
+          </div>
+          <h3 class="statistic__title">Почему приходят именно к нам?</h3>
+          <p class="statistic__text">
             О нас говорят только хорошее. Но лучше 1 раз увидеть и
             прочувствовать, чем 10 раз прочитать.
           </p>
         </div>
+
+        <ul class="statistic__list">
+          <li class="statistic__item">
+            <span class="number">600</span>
+            <span class="plus-icon">+</span>
+            <p class="caption">Довольных клиентов в день</p>
+          </li>
+          <li class="statistic__item">
+            <span class="number">50</span>
+            <span class="plus-icon">+</span>
+            <p class="caption">Наград за отличный сервис</p>
+          </li>
+          <li class="statistic__item">
+            <span class="number">20</span>
+            <span class="plus-icon">+</span>
+            <p class="caption">Лучших мастеров Киева</p>
+          </li>
+          <li class="statistic__item">
+            <span class="number">100</span>
+            <span class="plus-icon">+</span>
+            <p class="caption">Подарков постоянным клиентам</p>
+          </li>
+        </ul>
       </section>
 
       <!-- masters -->
