--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
       <!-- about us -->
 
       <section class="container info">
-        <div class="info__title-block">
-          <span class="info__title--span"></span>
-          <h2 class="info__main-title">О НАС</h2>
+        <div class="title-block">
+          <span class="title__span--light"></span>
+          <h2 class="title--light">О НАС</h2>
         </div>
         <h3 class="info__title">Лучший Барбершоп твоего города</h3>
 
@@ -123,9 +123,9 @@
 
       <section class="prices">
         <div class="container center">
-          <div class="prices__title-block">
-            <span class="prices__title--span"></span>
-            <h2 class="prices__main-title">
+          <div class="title-block">
+            <span class="title__span--dark"></span>
+            <h2 class="title--dark">
               Проведи время в компании лучших мастеров
             </h2>
           </div>
@@ -174,9 +174,9 @@
 
       <section class="container statistic">
         <div>
-          <div class="statistic__title-block">
-            <span class="statistic__title--span"></span>
-            <h2 class="statistic__main-title">старая традиционная школа</h2>
+          <div class="title-block">
+            <span class="title__span--light"></span>
+            <h2 class="title--light">старая традиционная школа</h2>
           </div>
           <h3 class="statistic__title">Почему приходят именно к нам?</h3>
           <p class="statistic__text">
@@ -210,9 +210,13 @@
       </section>
 
       <!-- masters -->
-      <section>
-        <h2>для настоящих ценителей атмосферы</h2>
-        <h3>Наши мастера</h3>
+      <section class="container masters">
+        <div class="title-block">
+          <span class="title__span--light"></span>
+          <h2 class="title--light">для настоящих ценителей атмосферы</h2>
+        </div>
+        <h3 class="statistic__title">Наши мастера</h3>
+
         <ul>
           <li>
             <h4>John Smith</h4>
