--- a/index.html
+++ b/index.html
@@ -217,35 +217,188 @@
         </div>
         <h3 class="statistic__title">Наши мастера</h3>
 
-        <ul>
-          <li>
-            <h4>John Smith</h4>
-            <p>Extreme Barber</p>
-            <ul>
-              <li><a href="">inst</a></li>
-              <li><a href="">tw</a></li>
-              <li><a href="">fb</a></li>
-              <li><a href="">ln</a></li>
+        <ul class="masters__list">
+          <li class="masters__item">
+            <picture class="masters__image">
+              <source
+                srcset="
+                  ./images/masters/master-1-1280.jpg    1x,
+                  ./images/masters/master-1-1280@2x.jpg 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/masters/master-1-768.jpg    1x,
+                  ./images/masters/master-1-768@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/masters/master-1-480.jpg    1x,
+                  ./images/masters/master-1-480@2x.jpg 2x
+                "
+                media="(min-width: 480px)"
+              />
+              <img
+                src="./images/masters/master-1-480.jpg"
+                alt="Фото члена команды"
+              />
+            </picture>
+            <h4 class="masters__name">John Smith</h4>
+            <p class="masters__mark">Extreme Barber</p>
+            <ul class="masters__links">
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
           </li>
-          <li>
-            <h4>Michele Doe</h4>
-            <p>Extreme Barber</p>
-            <ul>
-              <li><a href="">inst</a></li>
-              <li><a href="">tw</a></li>
-              <li><a href="">fb</a></li>
-              <li><a href="">ln</a></li>
+          <li class="masters__item">
+            <picture class="masters__image">
+              <source
+                srcset="
+                  ./images/masters/master-2-1280.jpg    1x,
+                  ./images/masters/master-2-1280@2x.jpg 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/masters/master-2-768.jpg    1x,
+                  ./images/masters/master-2-768@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/masters/master-2-480.jpg    1x,
+                  ./images/masters/master-2-480@2x.jpg 2x
+                "
+                media="(min-width: 480px)"
+              />
+              <img
+                src="./images/masters/master-2-480.jpg"
+                alt="Фото члена команды"
+              />
+            </picture>
+            <h4 class="masters__name">Michele Doe</h4>
+            <p class="masters__mark">Extreme Barber</p>
+            <ul class="masters__links">
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
           </li>
-          <li>
-            <h4>Alan Black</h4>
-            <p>Extreme Barber</p>
-            <ul>
-              <li><a href="">inst</a></li>
-              <li><a href="">tw</a></li>
-              <li><a href="">fb</a></li>
-              <li><a href="">ln</a></li>
+          <li class="masters__item">
+            <picture class="masters__image">
+              <source
+                srcset="
+                  ./images/masters/master-3-1280.jpg    1x,
+                  ./images/masters/master-3-1280@2x.jpg 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/masters/master-3-768.jpg    1x,
+                  ./images/masters/master-3-768@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/masters/master-3-480.jpg    1x,
+                  ./images/masters/master-3-480@2x.jpg 2x
+                "
+                media="(min-width: 480px)"
+              />
+              <img
+                src="./images/masters/master-3-480.jpg"
+                alt="Фото члена команды"
+              />
+            </picture>
+            <h4 class="masters__name">Alan Black</h4>
+            <p class="masters__mark">Extreme Barber</p>
+            <ul class="masters__links">
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="masters__link">
+                <a href="">
+                  <svg class="icon-link">
+                    <use href="./images/svg/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
           </li>
         </ul>
