--- a/index.html
+++ b/index.html
@@ -405,8 +405,131 @@
       </section>
 
       <!-- portfolio -->
-      <section>
-        <h2>На латинском языке “барба” означает “борода”</h2>
+      <section class="container portfolio">
+        <div class="title-block">
+          <span class="title__span--light"></span>
+          <h2 class="title--light">
+            На латинском языке “барба” означает “борода”
+          </h2>
+        </div>
+        <ul class="portfolio__list">
+          <li class="portfolio__image">
+            <picture>
+              <source
+                srcset="
+                  ./images/portfolio/img-1-1280.jpg    1x,
+                  ./images/portfolio/img-1-1280@2x.jpg 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/portfolio/img-1-768.jpg    1x,
+                  ./images/portfolio/img-1-768@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/portfolio/img-1-480.jpg    1x,
+                  ./images/portfolio/img-1-480@2x.jpg 2x
+                "
+                media="(min-width: 480px)"
+              />
+              <img
+                src="./images/portfolio/img-1-480.jpg"
+                alt="Мастер работает с клиентом"
+              />
+            </picture>
+          </li>
+          <li class="portfolio__image">
+            <picture>
+              <source
+                srcset="
+                  ./images/portfolio/img-2-1280.jpg    1x,
+                  ./images/portfolio/img-2-1280@2x.jpg 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/portfolio/img-2-768.jpg    1x,
+                  ./images/portfolio/img-2-768@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/portfolio/img-2-480.jpg    1x,
+                  ./images/portfolio/img-2-480@2x.jpg 2x
+                "
+                media="(min-width: 480px)"
+              />
+              <img
+                src="./images/portfolio/img-2-480.jpg"
+                alt="Мастер работает с клиентом"
+              />
+            </picture>
+          </li>
+          <li class="portfolio__image">
+            <picture>
+              <source
+                srcset="
+                  ./images/portfolio/img-3-1280.jpg    1x,
+                  ./images/portfolio/img-3-1280@2x.jpg 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/portfolio/img-3-768.jpg    1x,
+                  ./images/portfolio/img-3-768@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/portfolio/img-3-480.jpg    1x,
+                  ./images/portfolio/img-3-480@2x.jpg 2x
+                "
+                media="(min-width: 480px)"
+              />
+              <img
+                src="./images/portfolio/img-3-480.jpg"
+                alt="Мастер работает с клиентом"
+              />
+            </picture>
+          </li>
+          <li class="portfolio__image">
+            <picture>
+              <source
+                srcset="
+                  ./images/portfolio/img-4-1280.jpg    1x,
+                  ./images/portfolio/img-4-1280@2x.jpg 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/portfolio/img-4-768.jpg    1x,
+                  ./images/portfolio/img-4-768@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/portfolio/img-4-480.jpg    1x,
+                  ./images/portfolio/img-4-480@2x.jpg 2x
+                "
+                media="(min-width: 480px)"
+              />
+              <img
+                src="./images/portfolio/img-4-480.jpg"
+                alt="Мастер работает с клиентом"
+              />
+            </picture>
+          </li>
+        </ul>
       </section>
     </main>
 
