--- a/index.html
+++ b/index.html
@@ -534,38 +534,62 @@
     </main>
 
     <!-- footer -->
-    <footer>
-      <div>
-        <h3>Онлайн-запись</h3>
+    <footer class="footer">
+      <div class="container form-container">
+        <h3 class="form-title">Онлайн-запись</h3>
         <form>
-          <input type="text" placeholder="Имя*" />
-          <input type="tel" placeholder="Телефон*" />
-          <input type="text" placeholder="сообщение" />
-          <a href="">отправить</a>
+          <input class="form-input" type="text" placeholder="Имя*" />
+          <input class="form-input" type="tel" placeholder="Телефон*" />
+          <input class="form-input" type="text" placeholder="сообщение" />
+          <a class="button--dark" href="">отправить</a>
         </form>
       </div>
-      <div>
-        <h3>Контакты</h3>
-        <address>ул. Васильковая, 7А Киев, 08132</address>
+      <div class="footer__contacts">
+        <h3 class="form-title">Контакты</h3>
+        <address class="footer__link">
+          <svg class="mark-icon">
+            <use href="./images/svg/sprite.svg#icon-map-pin"></use>
+          </svg>
+          ул. Васильковая, 7А Киев, 08132
+        </address>
         <ul>
-          <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-          <li>
-            <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+          <li class="footer__link">
+            <a href="tel:+380441111111">
+              <svg class="mark-icon">
+                <use href="./images/svg/sprite.svg#icon-phone"></use>
+              </svg>
+              +38 044 111 11 11</a
+            >
+          </li>
+          <li class="footer__link">
+            <a href="mailto:barbershop@email.com">
+              <svg class="mark-icon">
+                <use href="./images/svg/sprite.svg#icon-mail"></use>
+              </svg>
+              barbershop@email.com</a
+            >
           </li>
         </ul>
-        <h3>время работы</h3>
-        <p>Ежедневно с 9:00 до 22:00</p>
+        <div class="title-block">
+          <span class="title__span--dark"></span>
+          <h2 class="footer__title">время работы</h2>
+        </div>
+
+        <p class="footer__text">Ежедневно с 9:00 до 22:00</p>
       </div>
-      <div>
-        <span>Copyright 2020</span>
-        <ul>
-          <li>
-            <a href="">Instagram</a>
-          </li>
-          <li>
-            <a href="">Youtube</a>
-          </li>
-        </ul>
+      <div class="copyright container">
+        <div>
+          <span class="title__span--light"></span>
+          <ul class="copyright-list">
+            <li>
+              <a href="">Instagram</a>
+            </li>
+            <li>
+              <a href="">Youtube</a>
+            </li>
+          </ul>
+        </div>
+        <span class="copyright-span">Ⓒ Copyright 2020</span>
       </div>
     </footer>
 
