--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <!-- header -->
 
-    <header class="container">
-      <nav>
+    <!-- <header class="container header">
+      <nav class="nav">
         <a href="/" class="header__logo">
           <img class="header__logo-img" src="./images/svg/logo.svg" alt="" />
         </a>
@@ -73,11 +73,25 @@
           ></use>
         </svg>
       </button>
-    </header>
+    </header> -->
     <main>
       <!-- hero -->
       <section class="hero">
-        <div>
+        <div class="hero__sidebar">
+          <span class="hero__social-links--span"></span>
+          <ul class="hero__social-links-list">
+            <li class="hero__social-link">
+              <a href="">Instagram</a>
+
+
+              
+            </li>
+            <li class="hero__social-link">
+              <a href="">Youtube</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hero__main-block">
           <div class="hero__title-block">
             <span class="hero__title--span"></span>
             <h1 class="hero__main-title">A hair salon for men in Kyiv</h1>
@@ -88,6 +102,7 @@
             со вкусом.
           </p>
         </div>
+
       </section>
 
       <!-- about us -->
